fix: remove settings tab on edit on mobile

--- a/collective/rcse/resources/dev/less/mobile.less
+++ b/collective/rcse/resources/dev/less/mobile.less
@@ -251,8 +251,22 @@ dd.portletItem{margin-left:0}
 }
 
 /* Edit */
+div[contenteditable] {
+   min-height: 200px;
+   border-radius: 10px;
+   overflow: auto;
+}
+
+.formfieldset-Settings {
+    display: none !important;
+}
+
 .formfieldset-label_schema_ownership{
   display:none;
+}
+
+#formfield-form-widgets-IRelatedItems-relatedItems {
+    display: none !important;
 }
 
 /* CONTENT */
